# UZ_SequentialSteadyState

./: .gitmodules
sss_fortran/: .gitignore  Gewenste_Bijdrage_Deltares.docx  SequentialSteadyState.sln  SequentialSteadyStateLib.sln
sss_fortran/ExampleSSS/: ExampleSSS.vfproj  cmpvars.py  main.f90  plot_heads.py  plot_theta_phead.py  plot_theta_phead2.py  plots.py  plots_evap.py  plots_evap_rain.py  plots_theta.py
sss_fortran/ExampleSSS/x64/Debug/: BuildLog.htm  database_io.mod  database_utils.mod  downscaling.mod  dumpres.mod  globals.mod  ponding.mod  sss.mod  unsaturated_zone.mod
sss_fortran/ExampleSSS/x64/Release/: BuildLog.htm  database_io.mod  database_utils.mod  downscaling.mod  dumpres.mod  globals.mod  ponding.mod  sss.mod  unsaturated_zone.mod
sss_fortran/ExampleSSS_coupled/: ExampleSSS_coupled.vfproj  fort.666  fort.777  fort.888  main.f90  main_test.f90  plots.py  results.nc
sss_fortran/ExampleSSS_coupled/x64/Debug/: BuildLog.htm
sss_fortran/ExampleSSS_standalone/: ExampleSSS_standalone.vfproj  main.f90  plotscriptum.py  results.nc
sss_fortran/ExampleSSS_standalone/x64/Debug/: BuildLog.htm
sss_fortran/SeqSteadStateDLL/: SeqSteadState_bmi.f90  SeqSteadState_dll.vfproj  SequentialSteadyState_bmi.f90  meson.build
sss_fortran/SeqSteadStateDLL/x64/Debug/: BuildLog.htm
sss_fortran/SequentialSteadyState/: SequentialSteadyState.f90  UnsaturatedZone.f90  database_io.f90  database_utils.f90  downscaling.f90  dump_results.f90  globals.f90  meson.build  ponding.f90  sss_comp.f90
sss_fortran/netcdf/: netcdff.vfproj
(+294 files in other folders)
